--- a/STSb_Multilingual_16_each_model_languagues_dev_spearman_cosine.html
+++ b/STSb_Multilingual_16_each_model_languagues_dev_spearman_cosine.html
@@ -1,4 +1,4 @@
-
+<!doctype html>
 <body>
     <div style="width:800px; margin:0 auto;">
     <br></br><br></br><div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
